add ContentElement & translations to product type
