# src/open_producten/producttypen/models/producttype.py
@@ -4,7 +4,7 @@ from django.contrib.postgres.fields import ArrayField
 from django.db import models
 from django.utils.translation import gettext_lazy as _
 
-from markdownx.models import MarkdownxField
+from parler.models import TranslatableModel, TranslatedFields
 
 from open_producten.locaties.models import Contact, Locatie, Organisatie
 from open_producten.utils.fields import ChoiceArrayField
@@ -24,12 +24,7 @@ class ProductStateChoices(models.TextChoices):
     VERLOPEN = "verlopen", _("Verlopen")
 
 
-class ProductType(BasePublishableModel):
-    naam = models.CharField(
-        verbose_name=_("product type naam"),
-        max_length=100,
-        help_text=_("naam van het product type."),
-    )
+class ProductType(BasePublishableModel, TranslatableModel):
 
     code = models.CharField(
         verbose_name=_("code"),
@@ -57,11 +52,6 @@ class ProductType(BasePublishableModel):
         default="",
         max_length=300,
         help_text=_("Korte beschrijving van het product type, maximaal 300 karakters."),
-    )
-
-    beschrijving = MarkdownxField(
-        verbose_name=_("beschrijving"),
-        help_text=_("Product type beschrijving, ondersteund markdown format."),
     )
 
     keywords = ArrayField(
@@ -110,6 +100,22 @@ class ProductType(BasePublishableModel):
         related_name="product_typen",
         blank=True,
         help_text=_("De locaties waar het product beschikbaar is."),
+    )
+
+    translations = TranslatedFields(
+        samenvatting=models.TextField(
+            verbose_name=_("samenvatting"),
+            default="",
+            max_length=300,
+            help_text=_(
+                "Korte beschrijving van het product type, maximaal 300 karakters."
+            ),
+        ),
+        naam=models.CharField(
+            verbose_name=_("product type naam"),
+            max_length=100,
+            help_text=_("naam van het product type."),
+        ),
     )
 
     class Meta:
